build(deps): bump hmt-detection crate version to v0.10.1

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "solidity-detector-hardhat"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 
 [dependencies]
-hmt-detection = { git = "https://github.com/hummanta/hummanta.git" }
+hmt-detection = { git = "https://github.com/hummanta/hummanta.git", tag = "v0.10.1"}
 walkdir = "2"
